<?xml version="1.0"?>
<package format="2">
  <name>egh450_payload</name>
  <version>0.0.1</version>
  <description>The egh450_payload package</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
